@@ -365,6 +365,7 @@ DoLoadTeam (MELEE_STATE *pMS)
 		}
 
 		pMS->InputFunc = DoMelee;
+		pMS->LastInputTime = GetTimeCounter ();
 		{
 			RECT r;
 			
